Fixed some text wrapping issues

--- a/css/thaxnay.webflow.css
+++ b/css/thaxnay.webflow.css
@@ -187,10 +187,6 @@ a {
   display: flex;
 }
 
-.div-block-2 {
-  width: 75%;
-}
-
 .grid-2 {
   margin-right: 120px;
   margin-left: 120px;
@@ -1186,6 +1182,10 @@ a {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
   }
+
+  .image-11 {
+    max-width: 100%;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -1356,6 +1356,10 @@ a {
 }
 
 @media screen and (max-width: 479px) {
+  .container.no-padding-top {
+    padding-top: 0px;
+  }
+
   .container-2 {
     padding-top: 0px;
   }
@@ -1401,6 +1405,14 @@ a {
     padding-left: 0px;
   }
 
+  .navbar-2 {
+    display: none;
+  }
+
+  .section-3 {
+    max-width: 100vw;
+  }
+
   .portfolio-section-body {
     display: block;
   }
@@ -1418,6 +1430,14 @@ a {
   ._1-column-feature-grid {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
+  }
+
+  .section-4 {
+    max-width: 100vw;
+  }
+
+  .div-block-21 {
+    display: inline;
   }
 }
 
